--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -153,12 +153,14 @@ jobs:
           #!/bin/bash
           set -e
 
-          echo "Setting up Laravel worker services for production..."
+          echo "Setting up Laravel worker services for production (6 workers)..."
 
-          # Create systemd service for production queue worker
-          sudo tee /etc/systemd/system/novatix-production-queue-worker.service > /dev/null << 'EOTS'
+          # Create 6 systemd services for production queue workers
+          for i in {1..6}; do
+            echo "Creating production queue worker $i..."
+            sudo tee /etc/systemd/system/novatix-production-queue-worker-$i.service > /dev/null << EOTS
           [Unit]
-          Description=NovaTix Production Laravel Queue Worker
+          Description=NovaTix Production Laravel Queue Worker $i
           After=network.target redis.service
           Wants=redis.service
 
@@ -177,11 +179,12 @@ jobs:
           ExecStart=/usr/bin/php artisan queue:work redis --sleep=3 --tries=3 --max-time=3600 --memory=512 --verbose
           StandardOutput=journal
           StandardError=journal
-          SyslogIdentifier=novatix-production-queue
+          SyslogIdentifier=novatix-production-queue-$i
 
           [Install]
           WantedBy=multi-user.target
           EOTS
+          done
 
           # Set up Laravel scheduler via cron for production
           echo "Setting up Laravel scheduler via cron for production..."
@@ -201,8 +204,10 @@ jobs:
           echo "Reloading systemd daemon..."
           sudo systemctl daemon-reload
 
-          echo "Enabling production queue worker service..."
-          sudo systemctl enable novatix-production-queue-worker
+          echo "Enabling all 6 production queue worker services..."
+          for i in {1..6}; do
+            sudo systemctl enable novatix-production-queue-worker-$i
+          done
           EOT
           chmod +x ~/novatix/setups/setup_worker_services_prod.sh
 
@@ -306,11 +311,16 @@ jobs:
           #!/bin/bash
           set -e
 
-          echo "=== Stopping Laravel production queue worker ==="
-          sudo systemctl stop novatix-production-queue-worker || true
+          echo "=== Stopping all Laravel production queue workers ==="
+          for i in {1..6}; do
+            echo "Stopping worker $i..."
+            sudo systemctl stop novatix-production-queue-worker-$i || true
+          done
 
           echo "=== Resetting service failure counters ==="
-          sudo systemctl reset-failed novatix-production-queue-worker || true
+          for i in {1..6}; do
+            sudo systemctl reset-failed novatix-production-queue-worker-$i || true
+          done
 
           echo "=== Restarting PHP-FPM ==="
           sudo systemctl restart php8.3-fpm
@@ -363,24 +373,43 @@ jobs:
               exit 1
           fi
 
-          echo "=== Starting Laravel production queue worker ==="
-          sudo systemctl start novatix-production-queue-worker
+          echo "=== Starting all Laravel production queue workers ==="
+          FAILED_WORKERS=0
+          for i in {1..6}; do
+            echo "Starting worker $i..."
+            if sudo systemctl start novatix-production-queue-worker-$i; then
+              echo "✓ Worker $i started successfully"
+            else
+              echo "✗ Worker $i failed to start"
+              FAILED_WORKERS=$((FAILED_WORKERS + 1))
+            fi
+          done
+
           sleep 5
 
           echo "=== Final service status check ==="
           echo "Redis status:"
           sudo systemctl status redis-server --no-pager -l || true
 
-          echo "Production queue worker status:"
-          sudo systemctl status novatix-production-queue-worker --no-pager -l || true
+          echo "Production queue workers status:"
+          ACTIVE_WORKERS=0
+          for i in {1..6}; do
+            if sudo systemctl is-active --quiet novatix-production-queue-worker-$i; then
+              echo "✓ Worker $i is running"
+              ACTIVE_WORKERS=$((ACTIVE_WORKERS + 1))
+            else
+              echo "✗ Worker $i is not running"
+              echo "Worker $i logs:"
+              sudo journalctl -u novatix-production-queue-worker-$i --no-pager -n 5
+            fi
+          done
 
-          echo "=== Checking if production queue worker is actually running ==="
-          if ! sudo systemctl is-active --quiet novatix-production-queue-worker; then
-              echo "WARNING: Production queue worker failed to start"
-              sudo journalctl -u novatix-production-queue-worker --no-pager -n 20
-              echo "Continuing deployment without queue worker..."
+          echo "=== Summary ==="
+          echo "Active workers: $ACTIVE_WORKERS/6"
+          if [ $ACTIVE_WORKERS -lt 6 ]; then
+              echo "WARNING: Not all workers are running. Check logs above."
           else
-              echo "✓ Production queue worker is running"
+              echo "✓ All workers are running successfully"
           fi
 
           echo "=== Laravel Production Scheduler Status ==="
@@ -512,14 +541,34 @@ jobs:
           cat > ~/novatix/setups/check_workers_prod.sh << 'EOT'
           #!/bin/bash
           echo "=== Laravel Production Workers Status ==="
-          echo "Production Queue Worker Status:"
-          sudo systemctl status novatix-production-queue-worker --no-pager -l
+          echo "Production Queue Workers Status:"
+          ACTIVE_WORKERS=0
+          for i in {1..6}; do
+            echo "--- Worker $i ---"
+            if sudo systemctl is-active --quiet novatix-production-queue-worker-$i; then
+              echo "✓ Worker $i is ACTIVE"
+              ACTIVE_WORKERS=$((ACTIVE_WORKERS + 1))
+            else
+              echo "✗ Worker $i is INACTIVE"
+            fi
+            sudo systemctl status novatix-production-queue-worker-$i --no-pager -l | head -n 10
+            echo ""
+          done
+
+          echo "=== Summary ==="
+          echo "Active workers: $ACTIVE_WORKERS/6"
+
           echo ""
           echo "Redis Status:"
           sudo systemctl status redis-server --no-pager -l
           echo ""
-          echo "Recent logs from production queue worker:"
-          sudo journalctl -u novatix-production-queue-worker --no-pager -n 10
+
+          echo "Recent logs from production queue workers:"
+          for i in {1..6}; do
+            echo "--- Worker $i Recent Logs ---"
+            sudo journalctl -u novatix-production-queue-worker-$i --no-pager -n 5
+            echo ""
+          done
           EOT
           chmod +x ~/novatix/setups/check_workers_prod.sh
 
